<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile_display_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/user_profile_display_list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_profile_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/user_profile_name"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_display_list_item">

        <EditText
            android:id="@+id/user_profile_display_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="5dp"
            android:text="@string/user_profile_display_date_of_birth_with_age"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_profile_display_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="5dp"
            android:text="@string/user_profile_display_list_item_gender_default"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/send_message_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_shape"
            android:letterSpacing="0"
            android:onClick="sendMessageClick"
            android:stateListAnimator="@null"
            android:text="@string/user_profile_display_list_item_send_message"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@color/buttonText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/edit_profile_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_shape"
            android:letterSpacing="0"
            android:onClick="editProfilePhotoClick"
            android:stateListAnimator="@null"
            android:text="@string/user_profile_list_item_edit_profile_photo"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@color/buttonText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/edit_profile_data_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_shape"
            android:letterSpacing="0"
            android:onClick="editProfileDataClick"
            android:stateListAnimator="@null"
            android:text="@string/user_profile_list_item_edit_profile_data"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@color/buttonText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>