<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_data_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileDataActivity">
    <ScrollView
        android:id="@+id/edit_profile_data_layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_profile_data_layout_helper1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit_profile_data_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/item_shape"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_profile_data_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/item_shape"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/surname"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile_data_first_name" />

            <TextView
                android:id="@+id/edit_profile_data_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/item_shape"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:onClick="dateOfBirthClick"
                android:padding="10dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile_data_surname" />

            <Spinner
                android:id="@+id/edit_profile_data_gender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/item_shape"
                android:dropDownVerticalOffset="48dp"
                android:popupBackground="@drawable/item_shape"
                android:drawableEnd="@drawable/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile_data_date_of_birth" />

            <Button
                android:id="@+id/new_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_shape"
                android:letterSpacing="0"
                android:onClick="confirmChangesClick"
                android:stateListAnimator="@null"
                android:text="@string/edit_profile_confirm_changes"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@color/buttonText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile_data_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>